@@ -1,3 +1,8 @@
+2012-04-15  Fabien Chêne  <fabien@gcc.gnu.org>
+
+	PR c++/52465
+	* g++.dg/lookup/using52.C: New.
+
 2012-04-13  Jason Merrill  <jason@redhat.com>
 
 	PR c++/52824
