@@ -1,3 +1,13 @@
+2012-04-15  Fabien Chêne  <fabien@gcc.gnu.org>
+
+	PR c++/52465
+	* parser.c (cp_parser_class_name): Call strip_using_decl and
+	return the target decl.
+	* name-lookup.c (strip_using_decl): Returns NULL_TREE if the decl
+	to be stripped is NULL_TREE.
+	(qualify_lookup): Call strip_using_decl and perform some checks on
+	the target decl.
+
 2012-04-13  Jason Merrill  <jason@redhat.com>
 
 	PR c++/52824
